--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ html, body{
     margin:0;
     padding:0;
     font-family: 'Red Hat Display', sans-serif;
+    background-color:#E0E8FF;
+    background-image:url(../images/pattern-background-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .container{
@@ -117,6 +121,10 @@ html, body{
 }
 
 @media only screen and (max-width: 450px) {
+
+    body{
+        background-image: url(../images/pattern-background-mobile.svg);
+    }
 
     .card{
         width:327px;
